ch_20_final_server : rev 7 CDD threadpool

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
@@ -274,11 +274,15 @@
     "### Reading the Request\n",
     "\n",
     "Let’s implement the functionality to read the request from the browser! To  \n",
-    "separate the concerns of first getting a connection and then taking some action  \n",
-    "with the connection, we’ll start a new function for processing connections. In  \n",
-    "this new handle_connection function, we’ll read data from the TCP stream and  \n",
-    "print it so we can see the data being sent from the browser. Change the code to  \n",
-    "look like Listing 20-2.\n",
+    "separate the concerns of :  \n",
+    "\n",
+    "- first getting a connection  \n",
+    "- and then taking some action with the connection,  \n",
+    "- we’ll start a new function for processing connections.  \n",
+    "\n",
+    "In this new `handle_connection` function, we’ll read data from the TCP stream  \n",
+    "and print it so we can see the data being sent from the browser. Change the  \n",
+    "code to look like Listing 20-2.\n",
     "\n",
     "> Filename: src/main.rs"
    ]
@@ -322,33 +326,41 @@
    "source": [
     "> Listing 20-2: Reading from the TcpStream and printing the data\n",
     "\n",
-    "We bring std::io::prelude and std::io::BufReader into scope to get access to  \n",
+    "#### -- Buffer Read connection stream and Handle it --\n",
+    "\n",
+    "We bring `std::io::prelude` and `std::io::BufReader` into scope to get access to  \n",
     "traits and types that let us read from and write to the stream. In the for loop  \n",
     "in the main function, instead of printing a message that says we made a  \n",
-    "connection, we now call the new handle_connection function and pass the stream  \n",
-    "to it.\n",
+    "connection, we now call the new `handle_connection` function and pass the  \n",
+    "stream to it.\n",
     "\n",
-    "In the handle_connection function, we create a new BufReader instance that  \n",
-    "wraps a mutable reference to the stream. BufReader adds buffering by managing  \n",
-    "calls to the std::io::Read trait methods for us.\n",
+    "In the `handle_connection` function, we create a new `BufReader` instance that  \n",
+    "wraps a mutable reference to the stream. `BufReader` adds buffering by managing  \n",
+    "calls to the `std::io::Read` trait methods for us.\n",
     "\n",
-    "We create a variable named http_request to collect the lines of the request the  \n",
-    "browser sends to our server. We indicate that we want to collect these lines in  \n",
-    "a vector by adding the Vec<_> type annotation.\n",
+    "We create a variable named `http_request` to collect the lines of the request  \n",
+    "the browser sends to our server. We indicate that we want to collect these  \n",
+    "lines in a vector by adding the Vec<_> type annotation.\n",
     "\n",
-    "BufReader implements the std::io::BufRead trait, which provides the lines  \n",
-    "method. The lines method returns an iterator of Result<String, std::io::Error>  \n",
+    "#### -- BufRead to String lines as Result and print --\n",
+    "\n",
+    "BufReader implements the `std::io::BufRead` trait, which provides the lines  \n",
+    "method. The lines method returns an iterator of `Result<String, std::io::Error>`  \n",
     "by splitting the stream of data whenever it sees a newline byte. To get each  \n",
     "String, we map and unwrap each Result. The Result might be an error if the data  \n",
     "isn’t valid UTF-8 or if there was a problem reading from the stream. Again, a  \n",
     "production program should handle these errors more gracefully, but we’re  \n",
     "choosing to stop the program in the error case for simplicity.\n",
     "\n",
-    "The browser signals the end of an HTTP request by sending two newline  \n",
-    "characters in a row, so to get one request from the stream, we take lines until  \n",
-    "we get a line that is the empty string. Once we’ve collected the lines into the  \n",
-    "vector, we’re printing them out using pretty debug formatting so we can take a  \n",
-    "look at the instructions the web browser is sending to our server."
+    "- The browser signals the end of an HTTP request  \n",
+    "- by sending two newline characters in a row,  \n",
+    "\n",
+    "So to get one request from the stream, we take lines until we get a line that  \n",
+    "is the empty string.  \n",
+    "\n",
+    "Once we’ve collected the lines into the vector, we’re printing them out using  \n",
+    "pretty debug formatting so we can take a look at the instructions the web  \n",
+    "browser is sending to our server."
    ]
   },
   {
@@ -356,7 +368,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s try this code! Start the program and make a request in a web browser again. Note that we’ll still get an error page in the browser, but our program’s output in the terminal will now look similar to this:\n",
+    "#### -- Run Server and Check via Browser Nav to Address --\n",
+    "\n",
+    "Let’s try this code! Start the program and make a request in a web browser  \n",
+    "again. Note that we’ll still get an error page in the browser, but our  \n",
+    "program’s output in the terminal will now look similar to this:\n",
     "\n",
     "```sh\n",
     "$ cargo run\n",
@@ -1268,6 +1284,316 @@
     "we want to use instead of thread::spawn.\n",
     "\n",
     "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use std::{\n",
+    "    fs,\n",
+    "    io::{prelude::*, BufReader},\n",
+    "    net::{TcpListener, TcpStream},\n",
+    "    thread,\n",
+    "    time::Duration,\n",
+    "}\n",
+    "\n",
+    "fn handle_connection_serial(mut stream: TcpStream){\n",
+    "    let buf_reader = BufReader::new(&mut stream);\n",
+    "\n",
+    "    let request_line = buf_reader.lines().next().unwrap().unwrap();\n",
+    "\n",
+    "    let (status_line, filename) = match &request_line[..] {\n",
+    "        \"GET / HTTP/1.1\" => (\"HTTP/1.1 200 OK\", \"hello.html\"),\n",
+    "        \"GET /sleep HTTP/1.1\" => {\n",
+    "            thread::sleep(Duration::from_secs(5));\n",
+    "            (\"HTTP/1.1 200 OK\", \"hello_sleep.html\")\n",
+    "        }\n",
+    "        _ => (\"HTTP/1.1 404 NOT FOUND\", \"404.html\"),\n",
+    "    };\n",
+    "\n",
+    "    let contents = fs::read_to_string(filename).unwrap();\n",
+    "    let length = contents.len();\n",
+    "\n",
+    "    let response =\n",
+    "        format!(\n",
+    "            \"{status_line}\\r\\nContent-Length: {length}\\r\\n\\r\\n{contents}\"\n",
+    "        );\n",
+    "\n",
+    "    stream.write_all(response.as_bytes()).unwrap();\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let listener = TcpListener::bind(\"127.0.0.1:7878\").unwrap();\n",
+    "    let pool = ThreadPool::new(4);\n",
+    "\n",
+    "    for stream in listener.incoming() {\n",
+    "        let stream = stream.unwrap();\n",
+    "\n",
+    "        pool.execute(|| {\n",
+    "            handle_connection_serial(stream);\n",
+    "        });\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-12: Our ideal ThreadPool interface\n",
+    "\n",
+    "#### -- ThreadPool Draft Fails Compile -> CDD --\n",
+    "\n",
+    "We use ThreadPool::new to create a new thread pool with a configurable number  \n",
+    "of threads, in this case four. Then, in the for loop, pool.execute has a similar  \n",
+    "interface as thread::spawn in that it takes a closure the pool should run for  \n",
+    "each stream. We need to implement pool.execute so it takes the closure and  \n",
+    "gives it to a thread in the pool to run. This code won’t yet compile, but we’ll  \n",
+    "try so the compiler can guide us in how to fix it."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building ThreadPool Using `Compiler Driven Development`\n",
+    "\n",
+    "Make the changes in Listing 20-12 to src/main.rs, and then let’s use the  \n",
+    "compiler errors from cargo check to drive our development. Here is the first  \n",
+    "error we get:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo check\n",
+    "    Checking hello v0.1.0 (file:///projects/hello)\n",
+    "error[E0433]: failed to resolve: use of undeclared type `ThreadPool`\n",
+    "  --> src/main.rs:11:16\n",
+    "   |\n",
+    "11 |     let pool = ThreadPool::new(4);\n",
+    "   |                ^^^^^^^^^^ use of undeclared type `ThreadPool`\n",
+    "\n",
+    "For more information about this error, try `rustc --explain E0433`.\n",
+    "error: could not compile `hello` due to previous error\n",
+    "```\n",
+    "\n",
+    "Great! This error tells us we need a ThreadPool type or module, so we’ll build  \n",
+    "one now. Our ThreadPool implementation will be independent of the kind of work  \n",
+    "our web server is doing. So, let’s switch the hello crate from a binary crate  \n",
+    "to a library crate to hold our ThreadPool implementation. After we change to a  \n",
+    "library crate, we could also use the separate thread pool library for any work  \n",
+    "we want to do using a thread pool, not just for serving web requests.\n",
+    "\n",
+    "Create a src/lib.rs that contains the following, which is the simplest  \n",
+    "definition of a ThreadPool struct that we can have for now:\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pub struct ThreadPool;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then edit main.rs file to bring ThreadPool into scope from the library crate by  \n",
+    "adding the following code to the top of src/main.rs:\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "unresolved import `hello`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0432] Error:\u001b[0m unresolved import `hello`"
+     ]
+    }
+   ],
+   "source": [
+    "use hello::ThreadPool;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code still won’t work, but let’s check it again to get the next error that  \n",
+    "we need to address:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo check\n",
+    "    Checking hello v0.1.0 (file:///projects/hello)\n",
+    "error[E0599]: no function or associated item named `new` found for struct `ThreadPool` in the current scope\n",
+    "  --> src/main.rs:12:28\n",
+    "   |\n",
+    "12 |     let pool = ThreadPool::new(4);\n",
+    "   |                            ^^^ function or associated item not found in `ThreadPool`\n",
+    "\n",
+    "For more information about this error, try `rustc --explain E0599`.\n",
+    "error: could not compile `hello` due to previous error\n",
+    "```\n",
+    "\n",
+    "This error indicates that next we need to create an associated function named  \n",
+    "new for ThreadPool. We also know that new needs to have one parameter that can  \n",
+    "accept 4 as an argument and should return a ThreadPool instance. Let’s  \n",
+    "implement the simplest new function that will have those characteristics:\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pub struct ThreadPool;\n",
+    "\n",
+    "impl ThreadPool {\n",
+    "    pub fn new(size: usize) -> ThreadPool {\n",
+    "        ThreadPool\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We chose usize as the type of the size parameter, because we know that a  \n",
+    "negative number of threads doesn’t make any sense. We also know we’ll use this  \n",
+    "4 as the number of elements in a collection of threads, which is what the usize  \n",
+    "type is for, as discussed in the “Integer Types” section of Chapter 3.\n",
+    "\n",
+    "Let’s check the code again:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo check\n",
+    "    Checking hello v0.1.0 (file:///projects/hello)\n",
+    "error[E0599]: no method named `execute` found for struct `ThreadPool` in the current scope\n",
+    "  --> src/main.rs:17:14\n",
+    "   |\n",
+    "17 |         pool.execute(|| {\n",
+    "   |              ^^^^^^^ method not found in `ThreadPool`\n",
+    "\n",
+    "For more information about this error, try `rustc --explain E0599`.\n",
+    "error: could not compile `hello` due to previous error\n",
+    "```\n",
+    "\n",
+    "Now the error occurs because we don’t have an execute method on ThreadPool.  \n",
+    "Recall from the “Creating a Finite Number of Threads” section that we decided  \n",
+    "our thread pool should have an interface similar to thread::spawn. In addition,  \n",
+    "we’ll implement the execute function so it takes the closure it’s given and  \n",
+    "gives it to an idle thread in the pool to run.\n",
+    "\n",
+    "We’ll define the execute method on ThreadPool to take a closure as a parameter.  \n",
+    "Recall from the “Moving Captured Values Out of the Closure and the Fn Traits”  \n",
+    "section in Chapter 13 that we can take closures as parameters with three  \n",
+    "different traits:  \n",
+    "\n",
+    "- Fn, \n",
+    "- FnMut, and \n",
+    "- FnOnce.  \n",
+    "\n",
+    "We need to decide which kind of closure to use here. We know we’ll end up doing  \n",
+    "something similar to the standard library thread::spawn implementation, so we  \n",
+    "can look at what bounds the signature of thread::spawn has on its parameter.  \n",
+    "The documentation shows us the following:\n",
+    "\n",
+    "```rust\n",
+    "pub fn spawn<F, T>(f: F) -> JoinHandle<T>\n",
+    "    where\n",
+    "        F: FnOnce() -> T,\n",
+    "        F: Send + 'static,\n",
+    "        T: Send + 'static,\n",
+    "```\n",
+    "\n",
+    "The F type parameter is the one we’re concerned with here; the T type parameter  \n",
+    "is related to the return value, and we’re not concerned with that. We can see  \n",
+    "that spawn uses FnOnce as the trait bound on F. This is probably what we want  \n",
+    "as well, because we’ll eventually pass the argument we get in execute to spawn.  \n",
+    "We can be further confident that FnOnce is the trait we want to use because the  \n",
+    "thread for running a request will only execute that request’s closure one time,  \n",
+    "which matches the Once in FnOnce.\n",
+    "\n",
+    "The F type parameter also has the trait bound Send and the lifetime bound  \n",
+    "'static, which are useful in our situation: we need Send to transfer the  \n",
+    "closure from one thread to another and 'static because we don’t know how long  \n",
+    "the thread will take to execute. Let’s create an execute method on ThreadPool  \n",
+    "that will take a generic parameter of type F with these bounds:\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pub struct ThreadPool;\n",
+    "\n",
+    "impl ThreadPool {\n",
+    "    pub fn new(size: usize) -> ThreadPool {\n",
+    "        ThreadPool\n",
+    "    }\n",
+    "\n",
+    "    pub fn execute<F>(&self, f: F)\n",
+    "    where\n",
+    "        F: FnOnce() + Send + 'static\n",
+    "    {}\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We still use the () after FnOnce because this FnOnce represents a closure that  \n",
+    "takes no parameters and returns the unit type (). Just like function  \n",
+    "definitions, the return type can be omitted from the signature, but even if we  \n",
+    "have no parameters, we still need the parentheses.\n",
+    "\n",
+    "Again, this is the simplest implementation of the execute method: it does  \n",
+    "nothing, but we’re trying only to make our code compile. Let’s check it again:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo check\n",
+    "    Checking hello v0.1.0 (file:///projects/hello)\n",
+    "    Finished dev [unoptimized + debuginfo] target(s) in 0.24s\n",
+    "```\n",
+    "\n",
+    "It compiles! But note that if you try cargo run and make a request in the  \n",
+    "browser, you’ll see the errors in the browser that we saw at the beginning of  \n",
+    "the chapter. Our library isn’t actually calling the closure passed to execute  \n",
+    "yet!\n",
+    "\n",
+    "> Note: A saying you might hear about languages with strict compilers, such as  \n",
+    "Haskell and Rust, is “if the code compiles, it works.” But this saying is not  \n",
+    "universally true. Our project compiles, but it does absolutely nothing! If we  \n",
+    "were building a real, complete project, this would be a good time to start  \n",
+    "writing unit tests to check that the code compiles and has the behavior we want."
    ]
   }
  ],
