ch_20_final_server : rev 8 threadpool -> worker

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
@@ -99,7 +99,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::net::TcpListener;\n",
@@ -290,7 +294,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -510,7 +518,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -645,7 +657,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -734,7 +750,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -819,7 +839,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -934,7 +958,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -1043,7 +1071,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -1200,7 +1232,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -1288,8 +1324,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -1396,7 +1436,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "pub struct ThreadPool;"
@@ -1416,7 +1460,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -1463,7 +1511,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "pub struct ThreadPool;\n",
@@ -1548,7 +1600,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "pub struct ThreadPool;\n",
@@ -1595,6 +1651,382 @@
     "were building a real, complete project, this would be a good time to start  \n",
     "writing unit tests to check that the code compiles and has the behavior we want."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validating the Number of Threads in new\n",
+    "\n",
+    "We aren’t doing anything with the parameters to new and execute. Let’s  \n",
+    "implement the bodies of these functions with the behavior we want. To start,  \n",
+    "let’s think about new. Earlier we chose an unsigned type for the size  \n",
+    "parameter, because a pool with a negative number of threads makes no sense.  \n",
+    "However, a pool with zero threads also makes no sense, yet zero is a perfectly  \n",
+    "valid usize. We’ll add code to check that size is greater than zero before we  \n",
+    "return a ThreadPool instance and have the program panic if it receives a zero  \n",
+    "by using the assert! macro, as shown in Listing 20-13.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pub struct ThreadPool;\n",
+    "\n",
+    "impl ThreadPool {\n",
+    "    /// Create a new ThreadPool\n",
+    "    /// size is the number of threads in the pool\n",
+    "    /// # Panics\n",
+    "    /// The `new` function will panic if the size is zero\n",
+    "    pub fn new(size: usize) -> ThreadPool {\n",
+    "        assert!(size > 0);\n",
+    "        ThreadPool\n",
+    "    }\n",
+    "\n",
+    "    pub fn execute<F>(&self, f: F)\n",
+    "    where\n",
+    "        F: FnOnce() + Send + 'static\n",
+    "    {}\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-13: Implementing ThreadPool::new to panic if size is zero\n",
+    "\n",
+    "We’ve also added some documentation for our ThreadPool with doc comments. Note  \n",
+    "that we followed good documentation practices by adding a section that calls out  \n",
+    "the situations in which our function can panic, as discussed in Chapter 14. Try  \n",
+    "running cargo doc --open and clicking the ThreadPool struct to see what the  \n",
+    "generated docs for new look like!\n",
+    "\n",
+    "Instead of adding the assert! macro as we’ve done here, we could change new  \n",
+    "into build and return a Result like we did with Config::build in the I/O project  \n",
+    "in Listing 12-9. But we’ve decided in this case that trying to create a thread  \n",
+    "pool without any threads should be an unrecoverable error. If you’re feeling  \n",
+    "ambitious, try to write a function named build with the following signature to  \n",
+    "compare with the new function:\n",
+    "\n",
+    "```rust\n",
+    "pub fn build(size: usize) -> Result<ThreadPool, PoolCreationError> {}\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating Space to Store the Threads\n",
+    "\n",
+    "Now that we have a way to know we have a valid number of threads to store in  \n",
+    "the pool, we can create those threads and store them in the ThreadPool struct  \n",
+    "before returning the struct. But how do we “store” a thread? Let’s take another  \n",
+    "look at the thread::spawn signature:\n",
+    "\n",
+    "```rust\n",
+    "pub fn spawn<F, T>(f: F) -> JoinHandle<T>\n",
+    "    where\n",
+    "        F: FnOnce() -> T,\n",
+    "        F: Send + 'static,\n",
+    "        T: Send + 'static,\n",
+    "```\n",
+    "\n",
+    "The spawn function returns a JoinHandle<T>, where T is the type that the  \n",
+    "closure returns. Let’s try using JoinHandle too and see what happens. In our  \n",
+    "case, the closures we’re passing to the thread pool will handle the connection  \n",
+    "and not return anything, so T will be the unit type ().\n",
+    "\n",
+    "The code in Listing 20-14 will compile but doesn’t create any threads yet.  \n",
+    "We’ve changed the definition of ThreadPool to hold a vector of  \n",
+    "thread::JoinHandle<()> instances, initialized the vector with a capacity of  \n",
+    "size, set up a for loop that will run some code to create the threads, and  \n",
+    "returned a ThreadPool instance containing them.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "use std::thread;\n",
+    "\n",
+    "pub struct ThreadPool{\n",
+    "    threads: Vec<thread::JoinHandle<()>>,\n",
+    "}\n",
+    "\n",
+    "impl ThreadPool{\n",
+    "    pub fn new(size: usize) -> ThreadPool{\n",
+    "        assert!(size > 0);\n",
+    "\n",
+    "        let mut threads = Vec::with_capacity(size);\n",
+    "\n",
+    "        for _ in 0..size{\n",
+    "            // create some threads and store them in the vector\n",
+    "        }\n",
+    "\n",
+    "        ThreadPool{ threads }\n",
+    "    }\n",
+    "\n",
+    "    pub fn execute<F>(&self, f: F)\n",
+    "    where\n",
+    "        F: FnOnce() + Send + 'static\n",
+    "    {}\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-14: Creating a vector for ThreadPool to hold the threads\n",
+    "\n",
+    "We’ve brought std::thread into scope in the library crate, because we’re using  \n",
+    "thread::JoinHandle as the type of the items in the vector in ThreadPool.\n",
+    "\n",
+    "Once a valid size is received, our ThreadPool creates a new vector that can  \n",
+    "hold size items. The with_capacity function performs the same task as Vec::new  \n",
+    "but with an important difference: it preallocates space in the vector. Because  \n",
+    "we know we need to store size elements in the vector, doing this allocation up  \n",
+    "front is slightly more efficient than using Vec::new, which resizes itself as  \n",
+    "elements are inserted.\n",
+    "\n",
+    "When you run cargo check again, it should succeed."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A Worker Struct Responsible for Sending Code from the ThreadPool to a Thread\n",
+    "\n",
+    "We left a comment in the for loop in Listing 20-14 regarding the creation of  \n",
+    "threads. Here, we’ll look at how we actually create threads. The standard  \n",
+    "library provides thread::spawn as a way to create threads, and thread::spawn  \n",
+    "expects to get some code the thread should run as soon as the thread is created.  \n",
+    "However, in our case, we want to create the threads and have them wait for code  \n",
+    "that we’ll send later. The standard library’s implementation of threads doesn’t  \n",
+    "include any way to do that; we have to implement it manually.\n",
+    "\n",
+    "We’ll implement this behavior by introducing a new data structure between the  \n",
+    "ThreadPool and the threads that will manage this new behavior. We’ll call this  \n",
+    "data structure Worker, which is a common term in pooling implementations. The  \n",
+    "Worker picks up code that needs to be run and runs the code in the Worker’s  \n",
+    "thread. Think of people working in the kitchen at a restaurant: the workers  \n",
+    "wait until orders come in from customers, and then they’re responsible for  \n",
+    "taking those orders and fulfilling them.\n",
+    "\n",
+    "Instead of storing a vector of JoinHandle<()> instances in the thread pool,  \n",
+    "we’ll store instances of the Worker struct. Each Worker will store a single  \n",
+    "JoinHandle<()> instance. Then we’ll implement a method on Worker that will take  \n",
+    "a closure of code to run and send it to the already running thread for  \n",
+    "execution. We’ll also give each worker an id so we can distinguish between the  \n",
+    "different workers in the pool when logging or debugging.\n",
+    "\n",
+    "Here is the new process that will happen when we create a ThreadPool. We’ll  \n",
+    "implement the code that sends the closure to the thread after we have Worker  \n",
+    "set up in this way:  \n",
+    "\n",
+    "1. Define a Worker struct that holds an id and a JoinHandle<()>.\n",
+    "2. Change ThreadPool to hold a vector of Worker instances.\n",
+    "3. Define a Worker::new function that takes an id number and returns a Worker  \n",
+    "instance that holds the id and a thread spawned with an empty closure.\n",
+    "4. In ThreadPool::new, use the for loop counter to generate an id, create a  \n",
+    "new Worker with that id, and store the worker in the vector.\n",
+    "\n",
+    "If you’re up for a challenge, try implementing these changes on your own before  \n",
+    "looking at the code in Listing 20-15.\n",
+    "\n",
+    "Ready? Here is Listing 20-15 with one way to make the preceding modifications.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "use std::thread;\n",
+    "\n",
+    "pub struct Worker{ \n",
+    "    id: usize,\n",
+    "    thread: thread::JoinHandle<()>,\n",
+    "}\n",
+    "\n",
+    "pub struct ThreadPool{\n",
+    "    workers: Vec<Worker>,\n",
+    "}\n",
+    "\n",
+    "impl ThreadPool{\n",
+    "    pub fn new(size: usize) -> ThreadPool{\n",
+    "        assert!(size > 0);\n",
+    "\n",
+    "        let mut workers = Vec::with_capacity(size);\n",
+    "\n",
+    "        for id in 0..size{\n",
+    "            // add workers here\n",
+    "            workers.push(Worker::new(id));\n",
+    "        }\n",
+    "\n",
+    "        ThreadPool{ workers }\n",
+    "    }\n",
+    "\n",
+    "    pub fn execute<F>(&self, f:F)\n",
+    "    where\n",
+    "        F: FnOnce() + Send + 'static\n",
+    "    {}\n",
+    "}\n",
+    "\n",
+    "impl Worker{\n",
+    "    fn new(id: usize) -> Worker{\n",
+    "        let thread = thread::spawn(|| {});\n",
+    "\n",
+    "        Worker{ id, thread }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-15: Modifying ThreadPool to hold Worker instances instead of  \n",
+    "πholding threads directly\n",
+    "\n",
+    "We’ve changed the name of the field on ThreadPool from threads to workers  \n",
+    "because it’s now holding Worker instances instead of JoinHandle<()> instances.  \n",
+    "We use the counter in the for loop as an argument to Worker::new, and we store  \n",
+    "each new Worker in the vector named workers.\n",
+    "\n",
+    "External code (like our server in src/main.rs) doesn’t need to know the  \n",
+    "implementation details regarding using a Worker struct within ThreadPool, so we  \n",
+    "make the Worker struct and its new function private. The Worker::new function  \n",
+    "uses the id we give it and stores a JoinHandle<()> instance that is created by  \n",
+    "spawning a new thread using an empty closure.\n",
+    "\n",
+    "> Note: If the operating system can’t create a thread because there aren’t  \n",
+    "enough system resources, thread::spawn will panic. That will cause our whole  \n",
+    "server to panic, even though the creation of some threads might succeed. For  \n",
+    "simplicity’s sake, this behavior is fine, but in a production thread pool  \n",
+    "implementation, you’d likely want to use std::thread::Builder and its spawn  \n",
+    "method that returns Result instead.\n",
+    "\n",
+    "This code will compile and will store the number of Worker instances we  \n",
+    "specified as an argument to ThreadPool::new. But we’re still not processing the  \n",
+    "closure that we get in execute. Let’s look at how to do that next."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sending Requests to Threads via Channels\n",
+    "\n",
+    "The next problem we’ll tackle is that the closures given to thread::spawn do  \n",
+    "absolutely nothing. Currently, we get the closure we want to execute in the  \n",
+    "execute method. But we need to give thread::spawn a closure to run when we  \n",
+    "create each Worker during the creation of the ThreadPool.\n",
+    "\n",
+    "We want the Worker structs that we just created to fetch the code to run from a  \n",
+    "queue held in the ThreadPool and send that code to its thread to run.\n",
+    "\n",
+    "The channels we learned about in Chapter 16—a simple way to communicate between  \n",
+    "two threads—would be perfect for this use case. We’ll use a channel to function  \n",
+    "as the queue of jobs, and execute will send a job from the ThreadPool to the  \n",
+    "Worker instances, which will send the job to its thread. Here is the plan:\n",
+    "\n",
+    "1. The ThreadPool will create a channel and hold on to the sender.\n",
+    "2. Each Worker will hold on to the receiver.\n",
+    "3. We’ll create a new Job struct that will hold the closures we want to send down the channel.\n",
+    "4. The execute method will send the job it wants to execute through the sender.\n",
+    "5. In its thread, the Worker will loop over its receiver and execute the  \n",
+    "closures of any jobs it receives.\n",
+    "\n",
+    "Let’s start by creating a channel in ThreadPool::new and holding the sender in  \n",
+    "the ThreadPool instance, as shown in Listing 20-16. The Job struct doesn’t hold  \n",
+    "anything for now but will be the type of item we’re sending down the channel.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "use std::{sync::mpsc, thread};\n",
+    "\n",
+    "struct Job;\n",
+    "\n",
+    "pub struct Worker{\n",
+    "    id: usize,\n",
+    "    thread: thread::JoinHandle<()>,\n",
+    "}\n",
+    "\n",
+    "impl Worker{\n",
+    "    fn new(id: usize) -> Worker{\n",
+    "        let thread = thread::spawn(|| {});\n",
+    "\n",
+    "        Worker{ id, thread }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "pub struct ThreadPool{\n",
+    "    workers : vec<Worker>,\n",
+    "    sender : mpsc:Sender<Job>,\n",
+    "}\n",
+    "\n",
+    "impl TheadPool{\n",
+    "    pub fn new(size: usize) -> ThreadPool{\n",
+    "        assert!(size > 0);\n",
+    "\n",
+    "        let (sender, receiver) = mpsc::channel();\n",
+    "\n",
+    "        let mut workers = Vec::with_capacity(size);\n",
+    "\n",
+    "        for id in 0..size{\n",
+    "            workers.push(Worker::new(id));\n",
+    "        }\n",
+    "\n",
+    "        ThreadPool{ workers, sender }\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
@@ -1607,7 +2039,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "rust",
+   "name": "Rust",
    "pygment_lexer": "rust",
    "version": ""
   },
